WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268662
[WebGPU] PresentationContextImpl::unconfigure may crash if context is null
https://bugs.webkit.org/show_bug.cgi?id=268662
Summary
[WebGPU] PresentationContextImpl::unconfigure may crash if context is null
Mike Wyrzykowski
Reported
2024-02-02 14:35:48 PST
[WebGPU] PresentationContextImpl::unconfigure may crash if context is null
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-02-02 14:36:02 PST
radar://122173894
Mike Wyrzykowski
Comment 2
2024-02-02 14:38:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23779
EWS
Comment 3
2024-02-05 11:31:16 PST
Committed
274108@main
(8f6c812f3019): <
https://commits.webkit.org/274108@main
> Reviewed commits have been landed. Closing PR #23779 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug