[WebGPU] PresentationContextImpl::unconfigure may crash if context is null https://bugs.webkit.org/show_bug.cgi?id=268662 <radar://122173894>

Reviewed by Dan Glastonbury.

The presentation context may be nullptr, so we need to check before calling
member functions on it.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUCompositorIntegrationImpl.cpp:
(WebCore::WebGPU::CompositorIntegrationImpl::prepareForDisplay):
(WebCore::WebGPU::CompositorIntegrationImpl::recreateRenderBuffers):

Canonical link: https://commits.webkit.org/274108@main